use rpc in apps/api
